# performance-intelligence-engine

./: .gitignore  README.md  TAKEOFF.md  ocean_reef_takeoff.gpkg  pyproject.toml  state.json
.github/workflows/: ci.yml
benchmarks/: v1.json
configs/: default.toml
data/: buildings_2264.geojson  edge_candidates_2264.geojson  manual_bed_lines_2264.geojson  manual_zones_2264.geojson  parcel_scope_dissolved.geojson  parcel_scope_parcels.geojson  pavement_ccap_2264.geojson  pavement_clean_2264.geojson
data/raw/: buildings_ocean_reef.geojson  carteret_parcel_layer0_meta.json  carteret_parcels_query_oceandr_2500_2519_attrs.json  carteret_parcels_query_oceanreef_common_legaldesc_attrs.json  carteret_parcels_query_owner_jarrick_attrs.json  carteret_parcels_query_owner_ocean_reef_attrs.json  ccap_impervious_aoi.tif  condos_ocean_reef.geojson  landcover_ocean_reef.geojson  nc_risk_buildings_ocean_reef.geojson  ncdot_functionalclass_bbox_raw.geojson  ncdot_functionalclass_bbox_raw_v2.geojson  ncdot_lanewidth_bbox_raw.geojson  ncdot_layer_17.json  ncdot_layer_18.json  ncdot_layer_29.json  ncdot_layer_36.json  ncdot_layer_37.json  ncdot_roaddata_mapserver.json  ncdot_roadnc_folder.json  ncdot_roads_2264.geojson  ncdot_roads_4326.geojson  ncdot_streetname_bbox_raw.geojson  ncdot_streetname_bbox_raw_v2.geojson  ncdot_surfacetype_bbox_raw.geojson  ncdot_surfacetype_bbox_raw_v2.geojson  ncdot_throughlane_bbox_raw.geojson  ncdot_throughlane_bbox_raw_v2.geojson  ocean_reef_parcels.geojson  ocean_reef_parcels_2264.geojson  ocean_reef_parcels_4326.geojson  trails_aoi_2264.geojson
docs/: ARCHITECTURE.md  ROADMAP.md
reports/: AUDIT.md
scripts/: build_gpkg.py  build_pavement.py  build_scope.py  edge_classify.py  fetch_aerial.py  fetch_ccap_aoi.py  manual_layers.py  render_overlay.py  render_review_map.py  render_zoom.py  run_takeoff.py
src/idr_intelligence/: __init__.py  attack.py  benchmark.py  bounded_graph.py  campaigns.py  cli.py  config.py  dataio.py  evidence.py  features.py  graph.py  models.py  pipeline.py  registry.py  schema.py  simulator.py  streaming.py  training.py
tests/: test_state_record.py  test_system.py
