[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idr-intelligence"
version = "0.1.0"
description = "Temporal-graph campaign inference for IDR event streams"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
dependencies = [
  "numpy>=1.26",
  "torch>=2.2",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
idr-intelligence = "idr_intelligence.cli:main"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["idr_intelligence"]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true
