[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idr-intelligence"
version = "0.1.0"
description = "Temporal-graph campaign inference for IDR event streams"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
dependencies = [
  "numpy>=1.26",
  "torch>=2.2",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
idr-intelligence = "idr_intelligence.cli:main"

[tool.mypy]
mypy_path = "src"
packages = ["idr_intelligence"]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[tool.ruff.lint]
# Explicit selection so a distro ruff upgrade cannot silently change what CI
# enforces (an Arch ruff bump once broke CI on rules this repo never chose).
# TRY is deliberately absent: from_dict validation raises ValueError for
# malformed *data* (including wrong JSON types) — a documented, test-asserted
# contract that TRY004's TypeError preference would break.
select = ["E4", "E7", "E9", "F", "I", "UP", "RUF", "FURB"]
